Squashable commit; zeroing in on multithreaded problems; current discovery is that Name itself is not threadsafe
Signed-off-by: Laird Nelson <ljnelson@gmail.com>